Sat Oct 13 07:09:30 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkbindings.c (gtk_binding_set_add_path): to compare pattern
	specs, use g_pattern_spec_equal() instead of direct field accesses.
	upon compressing two equal paths of the same type, the resulting
	priority has to be the maximum.
	* gtk/gtkenums.h (enum): take GTK_PATH_PRIO_MASK out of the
	GtkPathPriorityType enum and make it a macro.

2001-10-12  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkwidget.c: Fix some doc comments.

Fri Oct 12 11:39:20 2001  Joshua N Pritikin  <vishnu@pobox.com>

	* gtk/gtktreeview.c (gtk_tree_view_get_path_at_pos): Fix to work
	on empty models.

2001-10-11  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkcolorsel.c, gtk/gtkwidget.c, gtk/gtktreeview.c:
	Remove stale gdk backend includes.
 
2001-10-10  Michael Meeks  <michael@ximian.com>

	* gtk/gtkcombo.c (gtk_combo_class_init): add enable_empty
	and value_in_list properties.
	(gtk_combo_set_value_in_list): notify change.
	(gtk_combo_set_property, gtk_combo_get_property): impl. prop.

2001-10-11  James Henstridge  <james@daa.com.au>

	* configure.in: add AS=CC and ASFLAGS=CFLAGS substitutions so
	that gtk+ can be built with automake 1.5 while not breaking
	things for automake 1.4.

Wed Oct 10 12:48:38 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_init_check): Call setlocale (LC_ALL, "").
	(#60606)

	* gtk/gtkmain.c (gtk_disable_setlocale): Add function
	to disable calling setlocale (LC_ALL, "").

	* gtk/gtkmain.c (gtk_set_locale): Indicate in the 
	docs that this function is not typically useful.

	* gdk/x11/{gdkim-x11.c,gdkmain-x11.c,gdkprivate-x11.h}: 
	Automatically initialize GDK for the current locale
	on gdk_init(). Don't reset locale to C when
	XSupportsLocale() fails.

	* gdk/linux-fb/gdkim-fb.c (gdk_set_locale): Remove
	useless checks for UTF-8 locale breakage that mattered
	only for X.

	* examples/calendar/calendar.c
	tests/{testgtk.c,testtext.c,testcalendar.c}: Remove calls to 
	gtk_set_locale().
